# tsemekwes

./: .gitignore  .vale.ini  AGENTS.md  CHANGELOG.md  Justfile  README.md  SYNTAX.md  biome.json  eslint.config.ts  index.html  package-lock.json  package.json  pyproject.toml  tsconfig.json
.corpus/design/: META_UPDATE.md
.github/workflows/: default.yml  publish.yml  test_publish.yml  testpublish.yml
.vale/styles/config/vocabularies/tsemekwes/: accept.txt
bundist/cmd/: parse-worker.js
doc/: index.html  search.js  tsemekwes.html  types.html
doc/tsemekwes/: __version__.html  abctools.html  api.html  bun.html  grammar.html  peg.html  tree.html  ts.html  types.html  version.html
doc/tsemekwes/ts/: types.html
etc/: plugins.md
fragments/: piscina.ts
grammar/: calc.json  tatsu.ebnf  tatsu.json
src/: index.ts  main.ts  tsemekwes.ts  vite-env.d.ts
src/__tests__/: basic-grammar.test.ts  bootstrap.test.ts  complex-grammars.test.ts  constraints.test.ts  defines.test.ts  directives.test.ts  ebnf.test.ts  eol.test.ts  error-handling.test.ts  error.test.ts  explore-tree.test.ts  grammar-structure.test.ts  input-positions.test.ts  join.test.ts  json-crate.test.ts  json-import.test.ts  keyword.test.ts  left-recursion.test.ts  lookahead.test.ts  meta.test.ts  misc.test.ts  model-repr.test.ts  model.test.ts  naming.test.ts  parsing.test.ts  patterns.test.ts  pretty.test.ts  round-trips.test.ts  rule_include_with_exp.json  sanity.test.ts  special-forms.test.ts  string.test.ts  syntax.test.ts  tokens-and-sequences.test.ts
src/api/: api.ts  error.ts  index.ts
src/cmd/: cli.ts  cmd-boot.ts  cmd-grammar.ts  cmd-info.ts  cmd-run.ts  cmd.ts  helpers.ts  index.ts  lib.ts  parse-worker.ts  progress.ts
src/config/: config.test.ts  config.ts  globals.ts  index.ts
src/config/__tests__/: config.test.ts
src/context/: core-ctx.ts  core.ts  ctx.ts  error.ts  index.ts  memento.test.ts  memento.ts  memo.ts  tracer.ts
src/context/__tests__/: memento.test.ts
src/error/: error.ts
src/input/: cursor-str.ts  cursor.ts  index.ts  patterns.test.ts  patterns.ts  str-cursor.test.ts  str-cursor.ts
src/input/__tests__/: cursor-str.test.ts  patterns.test.ts
src/json/: boot.ts  import.ts  index.ts  jsonl.ts  tatsu.json
src/peg/: analysis.test.ts  call.ts  compile.ts  directives-strip.ts  directives.ts  ebnf_semantics.ts  error.ts  exp.test.ts  exp.ts  export.ts  grammar.ts  index.ts  json.ts  leftrec.ts  link.ts  nullability.ts  optimize.ts  pretty.ts  rule.ts  summary.ts
src/peg/__tests__/: analysis.test.ts  directives-patterns.test.ts  exp.test.ts  regex.test.ts
src/peg/analysis/: compile.ts  leftrec.ts  link.ts  lookahead.ts  nullability.ts
src/peg/parsing/: call.ts  choice.ts  closure.ts  sequence.ts  tryexp.ts
src/trees/: closure.ts  index.ts  tree.test.ts  tree.ts
src/trees/__tests__/: tree.test.ts
src/tsemekwes/: __init__.py  _version.py  api.py  bun.py  grammar.py  parse.py  tree.py  types.py  types.ts  version.py
src/util/: asjson.ts  boundedmap.ts  compress.ts  countlines.ts  fs.ts  grammarDirectives.ts  heartbeat.ts  helpers.ts  index.ts  misc.ts  newlines.ts  repr.ts  stdin.ts  strings.ts
src/util/__tests__/: boundedmap.test.ts  countlines.test.ts  grammarDirectives.test.ts  newlines.test.ts  repr.test.ts  strings.test.ts  stripDirectives.ts
srcpy/: test.py
srcpy/tests/: __init__.py  conftest.py  test_api.py  test_bootstrap.py
srcpy/tsemekwes/: __init__.py  __main__.py  __version__.py  _version.py  abctools.py  api.py  bun.py  grammar.py  peg.py  test.py  tree.py  types.py  types.ts
srcpy/tsemekwes/ts/: __init__.py  types.py
tests/: ast.test.ts  basic-grammar.test.ts  bootstrap.test.ts  complex-grammars.test.ts  constraints.test.ts  directives.test.ts  eol.test.ts  errors.test.ts  input-positions.test.ts  join.test.ts  json-crate.test.ts  json-import.test.ts  keyword.test.ts  left-recursion.test.ts  lookahead.test.ts  misc.test.ts  model.test.ts  naming.test.ts  parsing.test.ts  patterns.test.ts  round-trips.test.ts  sanity.test.ts  special-forms.test.ts  syntax.test.ts  tokens-and-sequences.test.ts
