[project]
name = "tsemekwes"
version = "0.1.0"
description = "A PEG Parser generator in TypeScript"
readme = "README.md"
authors = [
    { name = "Juancarlo Añez", email = "apalala@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pybun>=1.3.14",
    "ts2python>=0.8.2",
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: General",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tsemekwes"]
artifacts = ["bundist/*.js"]
exclude = [
    "**/__tests__/*",
]

[tool.hatch.build.targets.wheel.force-include]
"bundist/" = "bundist/"
