[build-system]
requires = ["hatchling", "hatch-vcs", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[project]
name = "TSemekwes"
dynamic = ["version"]
description = "A PEG Parser generator in TypeScript"
readme = "README.md"
authors = [
    { name = "Juancarlo Añez", email = "apalala@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Software Development :: Compilers",
    "Topic :: Text Processing :: General",
]

dependencies = [
    "pybun>=1.3.14",
]

[dependency-groups]
dev = [
    "pdoc>=16.0.0",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "ts2python>=0.8.2",
    "tsemekwes",
    "vale>=3.13.0.0",
]

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "ERROR"
addopts = "-q --ignore=.venv -p no:logging"
testpaths = ["srcpy/tests"]
norecursedirs = [
    "*.egg",
    ".git",
    ".venv",
    "build",
    "dist",
    "tsdist",
]

[tool.hatch.build.targets.sdist]
exclude = [
    ".github",
    "bin/",
    "etc/",
    "fragments/",
    "public/",
]
targets = ["doc/"]

[tool.hatch.build.targets.wheel]
packages = ["srcpy/tsemekwes"]
exclude = [
    "**/__tests__/*",
]

[tool.hatch.build.targets.wheel.force-include]
"bundist/" = "bundist/"

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
tsemekwes = { workspace = true }
